<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondodeapp"
    tools:context=".ui.MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="300dp"
        android:layout_height="297dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="372dp"
        android:background="@android:color/transparent"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/login"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/usernameEditText"
        android:layout_width="298dp"
        android:layout_height="48dp"
        android:hint="@string/username"
        android:textColorHint="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.512"
        tools:ignore="MissingConstraints"
        android:textColor="@android:color/white"
        />

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="298dp"
        android:layout_height="48dp"
        android:hint="@string/password"
        android:textColorHint="#FFFFFF"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.582"
        tools:ignore="MissingConstraints"
        android:textColor="@android:color/white"
        />

    <CheckBox
        android:id="@+id/rememberMeCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:buttonTint="@android:color/white"
        android:text="@string/remember_me"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.191"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.67"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:background="@android:color/holo_blue_dark"
        android:text="@string/login"
        android:onClick="onLoginButtonClick"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.813"

        tools:ignore="MissingConstraints" />


    <Button
        android:id="@+id/registerButton"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:text="@string/register"
        android:textColor="@android:color/white"

        android:background="@android:color/darker_gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.898"
        tools:ignore="MissingConstraints" />

    <Spinner
        android:id="@+id/spinner_language"
        style="@style/AppTheme.CustomSpinner"
        android:layout_width="89dp"
        android:layout_height="37dp"
        android:layout_gravity="center_horizontal"
        android:entries="@array/language_options"
        android:prompt="@string/prompt_languages"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.173"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.056"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/tvTermsAndConditions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Terms and Conditions"
        android:textColor="@android:color/holo_blue_dark"
        android:textStyle="bold"
        android:background="@android:color/transparent"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.957"
        android:onClick="openTermsActivity"
        tools:ignore="MissingConstraints" />



</androidx.constraintlayout.widget.ConstraintLayout>

<!--//NP:141350 ARENAL ARMESTO ANTONIO JOSE-->