<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondodeapp"
    tools:context=".ui.TermsActivity">

    <Button
        android:id="@+id/closeButton"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:text="@string/Close"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.944"
        tools:ignore="MissingConstraints"
        android:background="@android:color/holo_blue_dark"
        />

    <EditText
        android:id="@+id/editTextText"
        android:layout_width="180dp"
        android:layout_height="45dp"
        android:ems="10"
        android:inputType="text"
        android:text="Terms and conditions"
        android:textColor="@android:color/holo_blue_dark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.036"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/welcome"
        android:layout_width="330dp"
        android:layout_height="590dp"
        android:gravity="start"
        android:justificationMode="inter_word"
        android:text="@string/welcome"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.602"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/terms"
        android:layout_width="329dp"
        android:layout_height="477dp"
        android:gravity="start"
        android:justificationMode="inter_word"
        android:text="@string/terms"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.653"
        tools:ignore="MissingConstraints" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />


</androidx.constraintlayout.widget.ConstraintLayout>

    <!--//NP:141350 ARENAL ARMESTO ANTONIO JOSE-->
